<resources>
    <string name="app_name">Chess Timer</string>
    <string name="one_min_text">1 min</string>
    <string name="five_min_text">5 min</string>
    <string name="ten_min_text">10 min</string>
    <string name="fifteen_min_text">15 min</string>
    <string name="twenty_min_text">20 min</string>
    <string name="thirty_min_text">30 min</string>
    <string name="reset_text">Reset The Clock?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="start_the_timer" translatable="false">01:00</string>
    <string name="stop_the_timer" translatable="false">00:00</string>
</resources>