<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/oneMinButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="95dp"
        android:background="@drawable/custom_button"
        android:text="@string/one_min_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fiveMinButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/five_min_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tenMinButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="145dp"
        android:background="@drawable/custom_button"
        android:text="@string/ten_min_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneMinButton"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fifteenMinButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/fifteen_min_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveMinButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/twentyMinButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="145dp"
        android:background="@drawable/custom_button"
        android:text="@string/twenty_min_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenMinButton"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/thirtyMinButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/thirty_min_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenMinButton"
        tools:ignore="MissingConstraints" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7057161373684740/6405764040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>



</androidx.constraintlayout.widget.ConstraintLayout>