<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/alert_text"
                android:text="@string/reset_text"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/noButton"
                android:text="@string/no_text"
                android:background="@drawable/custom_button"
                android:textColor="@android:color/white"
                android:layout_marginTop="50dp"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/yesButton"
                android:text="@string/yes_text"
                android:background="@drawable/finish_button_background"
                android:textColor="@android:color/white"
                android:layout_marginTop="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>